# insee-sirene-monitor

./: .env.example  .gitignore  DECISIONS.md  README.md  pyproject.toml  test_connection.ipynb
.github/workflows/: reset_pipeline.yml  retrigger_gold.yml
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/: sources.yml
dbt/models/gold/: gold_active_establishments.sql  gold_regional_activity.sql  gold_sector_trends.sql
docs/: job_architecture.drawio  setup_cluster.ipynb.ipynb  setup_project.ipynb.ipynb  workflow_architecture.drawio
ingestion/: fetch.py  first_fetch.py
jobs/: bronze_silver.yml  ingestion.py  ingestion_bronze.yml  job_bronze_to_silver.py  reset_pipeline.py  reset_pipeline.yml  silver_gold.yml
tasks/: task_bronze_to_silver.py  task_ingestion.py  task_reset_pipeline.py  task_silver_to_gold.py
transform/: bronze_to_silver.py  silver_to_gold.py
utils/: config.py  delta.py  pipeline_state.py  storage.py
workflows/: bronze_silver.yml  ingestion_bronze.yml
